# kaon_sullivan_gen

./: .gitignore  CMakeLists.txt  README.md
examples/: kaon_default.yaml  kaon_no_model.yaml
scripts/: diagnostic_plots.py  run.sh
src/: CMakeLists.txt  main.cpp
src/adapters/: APFELAdapter.cpp  APFELAdapter.h  PARTONSAdapter.cpp  PARTONSAdapter.h
src/core/: Generator.cpp  Generator.h  SullivanFlux.cpp  SullivanFlux.h
src/io/: RootWriter.cpp  RootWriter.h
src/models/: Barry2025Model.cpp  Barry2025Model.h  GpdModel.h  LHAPDFPdfModel.cpp  LHAPDFPdfModel.h  ModelAPI.h  PdfModel.h  ToyKaonModel.cpp  ToyKaonModel.h
src/physics/: CrossSection.cpp  CrossSection.h  StructureFunctions.cpp  StructureFunctions.h
tests/: CMakeLists.txt  test_run.cpp
